# LightSuite

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
demos/: debug_lsfm_perens_atlas.m  ls_analyze_lightsheet_volume.m
docs/: index.md  installation.md  usage_lightsheet_brain.md  usage_slice.md  usage_spinal_cord.md
examples/: brain_lightsheet.yaml
scripts/: import_arivis_csv_cells.m
scripts/lsfm_atlas_inspect/: inspect_lsfm_atlas.py  pyproject.toml
src/atlas/: findLsfmAtlasNiftis.m  resolveBrainAtlasConfig.m
src/atlas_counting/: atlasIntensityMap.m  atlasSpaceFromVolumeParams.m  backSliceVolumeToAtlas.m  backVolumeToAtlas.m  generateRegisteredBrainVolumes.m  reorganizeAreas.m  transformPointsToAtlas.m
src/cell_counting/: cellDetector.m  cellDetectorNew.m  cellDetectorNew2.m  extractCellsFromVolume.m  extractCellsFromVolumeNew.m  getCellImages2D.m  spatial_bandpass_3d.m  spatial_bandpass_3d_old.m
src/control_point_gui/: atlasNavigator.m  determineCuttingAngleGUI.m  matchControlPoints.m  matchControlPointsInSliceVolume.m  matchControlPointsInSlices.m  matchControlPoints_unified.m
src/fiber_tracing/: annotateGRINLens.m  extractAnnotationCircularSlice.m  (+2 more)
tests/: __init__.py  test_affine_fit_diagnostics.py  test_align.py  test_atlas.py  test_bcpd.py  test_brain_export.py  test_brain_register.py  test_config.py  test_doctor.py  test_elastix_helpers.py  test_gui_control_points.py  test_init_registration.py  test_io_discover.py  test_orientation.py  test_points.py  test_preprocess.py  test_registration_plots.py  test_registration_volume.py  test_slice_ops.py
(+69 files in other folders)
