[project]
name = "lightsuite"
version = "0.1.0"
description = "Python pipeline for mouse lightsheet and histology atlas registration"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "nibabel>=5.0",
    "tifffile>=2024.2.12",
    "zarr>=2.16",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "scikit-image>=0.22",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "dask[array]>=2024.1",
    "imagecodecs>=2024.1",
    "open3d>=0.18",
]

[project.optional-dependencies]
formats = [
    "ome-zarr>=0.9",
    "imaris-ims-file-reader>=0.1.8",
]
gpu = ["cupy-cuda12x"]
gui = ["napari[all]>=0.5", "qtpy", "magicgui", "ome-zarrpari>=1.0"]
registration = ["itk-elastix>=0.25", "open3d>=0.18"]
dev = ["pytest>=8.0", "pytest-regressions>=2.0", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
lightsuite = "lightsuite.cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lightsuite"]

[tool.hatch.build.targets.wheel.force-include]
"src/lightsuite" = "lightsuite"

[tool.hatch.build.targets.sdist]
only-include = ["src/lightsuite", "examples", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = true
